# sixf

./: README.md
hexapod_pkg/: package.xml  setup.cfg  setup.py
hexapod_pkg/meshes/: foot_link_14.stl  shin_link_14.stl  shin_link_2.stl  shin_link_36.stl  shin_link_5.stl  thigh_link_14.stl  thigh_link_2.stl  thigh_link_36.stl  thigh_link_5.stl
hexapod_pkg/urdf/: hexapod.urdf  simple.urdf
hexapod_pkg_moveit/: .setup_assistant  CMakeLists.txt  package.xml
hexapod_pkg_moveit/config/: hexapod_robot.ros2_control.xacro  hexapod_robot.srdf  hexapod_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  ros2_controllers.yaml  (+1 more)
py/: 1.py
robot_urdf/: package.xml  setup.cfg  setup.py
robot_urdf/meshes/: foot_link_2.stl  foot_link_36.stl  foot_link_5.stl
robot_urdf/urdf/: hexapod.urdf  hexapod_1.urdf.bak  hexapod_2.urdf
robot_urdf/urdf (copy)/hexapod/: hexapod.usd
robot_urdf/urdf (copy)/hexapod/configuration/: hexapod_physics.usd
robot_urdf/urdf/hexapod_2/: hexapod_2.usd
robot_urdf/urdf/hexapod_2/configuration/: hexapod_2_physics.usd
sixf_robot/: .setup_assistant  CMakeLists.txt  package.xml
sixf_robot/config/: hexapod_robot.ros2_control.xacro  hexapod_robot.srdf  hexapod_robot.urdf.xacro  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers (another copy).yaml  ros2_controllers.yaml
sixf_robot/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
sixf_robot/scripts/: move_leg.py
(+645 files in other folders)
