<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_urdf</name>
  <version>0.0.0</version>
  <description>Hexapod robot URDF package with URDF, meshes, and launch files.</description>
  <maintainer email="lee@todo.todo">lee</maintainer>
  <license>UCR</license>

  <!-- ✅ 构建系统 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ✅ 运行时依赖 -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>




  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
